this clear fix won't break margin collapse

--- a/src/css/util/2_clearfix.styl
+++ b/src/css/util/2_clearfix.styl
@@ -1,11 +1,8 @@
-.clearfix:before, .clearfix:after
-  content: ""
-  display: table
-
-
 .clearfix:after
+  visibility: hidden
+  display: block
+  font-size: 0
+  content: " "
   clear: both
-
-
-.clearfix
+  height: 0
   zoom: 1
